--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost, 1433; User=SA; Password=yourStrong(!)Password; Initial Catalog=apdb; Integrated Security=False;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+  },
   "AllowedHosts": "*"
 }
